Fix analysis save

--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -719,7 +719,7 @@
 
     <div class="box-footer">
       <div class="btn-group pull-right" style="margin-left: 10px;">
-        <button type="button" class="btn btn-primary" ng-show="ctrl.schedule.frequency_start_time" ng-bind="i18n.__('Save')" data-ng-click="ctrl.save(true);"></button>
+        <button type="button" class="btn btn-primary" ng-show="ctrl.schedule.frequency_start_time" ng-bind="i18n.__('Save')" data-ng-click="ctrl.save(false);"></button>
         <button type="button" class="btn btn-primary" ng-show="!ctrl.schedule.frequency_start_time" ng-bind="i18n.__('Save and Run')" data-ng-click="ctrl.save(true);"></button>
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="caret"></span>
