--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/angular-tree-control/css/tree-control-attribute.css">
 
   <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.css" />
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/angular-material/angular-material.min.css">
   <style>
     table > tbody {
       overflow-y: auto !important;
@@ -87,6 +88,9 @@
 <script src="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.js"></script>
 
 
+<script src="{[ BASE_URL ]}bower_components/angular-aria/angular-aria.min.js"></script>
+<script src="{[ BASE_URL ]}bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="{[ BASE_URL ]}bower_components/angular-material/angular-material.min.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -325,7 +329,7 @@
               </div>
             </div>
             <!-- ./col-md-6 -->
-
+<!--
             <div class="col-md-6" ng-show="ctrl.analysis.type_id === '{[ Enums.AnalysisType.MONITORED ]}'">
               <div class="form-group has-feedback" terrama2-show-errors>
                 <label>{{ i18n.__("Attribute Identifier") }}:</label>
@@ -336,10 +340,39 @@
                                    id='attribute_identifier'
                                    list='tableColumnsList'>
 
-                <!-- required -->
+                
                 <span class="help-block"
                       ng-show="forms.targetDataSeriesForm.attributeIdentifier.$dirty && forms.targetDataSeriesForm.attributeIdentifier.$error.required">
                   {{ __('Attribute Identifier') }}
+                </span>
+              </div>
+            </div>
+-->
+            <div class="col-md-6">
+              <div class="form-group" terrama2-show-errors>
+                <label>{{ i18n.__("Attribute Identifier") }}:</label>
+                <md-autocomplete
+                    required
+                    name="identifier"
+                    ng-disabled="ctrl.isDisabled"
+                    md-no-cache="ctrl.noCache"
+                    md-selected-item="ctrl.identifier"
+                    md-search-text-change="ctrl.searchTextChange(ctrl.searchText)"
+                    md-search-text="ctrl.searchText"
+                    md-selected-item-change="ctrl.selectedItemChange(item)"
+                    md-items="item in ctrl.querySearch(ctrl.searchText)"
+                    md-item-text="item"
+                    md-min-length="0"
+                    md-dropdown-position="bottom"
+                    md-clear-button="false"
+                    md-input-name="identifier">
+                  <md-item-template>
+                    <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item}}</span>
+                  </md-item-template>   
+                </md-autocomplete>
+                <span class="help-block"
+                      ng-show="forms.targetDataSeriesForm.identifier.$dirty && forms.targetDataSeriesForm.identifier.$error.required">
+                  {{ i18n.__("Attribute Identifier is required") }}
                 </span>
               </div>
             </div>
