[Partial] Component to autocomplete a input text

--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -329,54 +329,21 @@
               </div>
             </div>
             <!-- ./col-md-6 -->
-<!--
-            <div class="col-md-6" ng-show="ctrl.analysis.type_id === '{[ Enums.AnalysisType.MONITORED ]}'">
-              <div class="form-group has-feedback" terrama2-show-errors>
-                <label>{{ i18n.__("Attribute Identifier") }}:</label>
-                <input type="text" class="form-control"
-                                   name="identifier"
-                                   ng-model="ctrl.identifier"
-                                   ng-required="ctrl.analysis.type_id === '{[ Enums.AnalysisType.MONITORED ]}'"
-                                   id='attribute_identifier'
-                                   list='tableColumnsList'>
 
-                
-                <span class="help-block"
-                      ng-show="forms.targetDataSeriesForm.attributeIdentifier.$dirty && forms.targetDataSeriesForm.attributeIdentifier.$error.required">
-                  {{ __('Attribute Identifier') }}
-                </span>
-              </div>
-            </div>
--->
             <div class="col-md-6">
               <div class="form-group" terrama2-show-errors>
                 <label>{{ i18n.__("Attribute Identifier") }}:</label>
-                <md-autocomplete
-                    required
-                    name="identifier"
-                    ng-disabled="ctrl.isDisabled"
-                    md-no-cache="ctrl.noCache"
-                    md-selected-item="ctrl.identifier"
-                    md-search-text-change="ctrl.searchTextChange(ctrl.searchText)"
-                    md-search-text="ctrl.searchText"
-                    md-selected-item-change="ctrl.selectedItemChange(item)"
-                    md-items="item in ctrl.querySearch(ctrl.searchText)"
-                    md-item-text="item"
-                    md-min-length="0"
-                    md-dropdown-position="bottom"
-                    md-clear-button="false"
-                    md-input-name="identifier">
-                  <md-item-template>
-                    <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item}}</span>
-                  </md-item-template>   
-                </md-autocomplete>
+                
+                <!-- Input text with optional selection directive-->
+                <terrama2-text-select selected-item="ctrl.identifier" items="ctrl.columnsList"></terrama2-text-select>
+                <!-- required -->
                 <span class="help-block"
                       ng-show="forms.targetDataSeriesForm.identifier.$dirty && forms.targetDataSeriesForm.identifier.$error.required">
                   {{ i18n.__("Attribute Identifier is required") }}
                 </span>
               </div>
             </div>
-            <!-- ./col-md-6 -->
+
           </form>
         </div>
       </div>
