Css fixes to mozzila error

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -20,6 +20,7 @@
   <!-- Defines responsive layout to screen -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/angular-material/angular-material.min.css">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/AdminLTE/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
