--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -1,3 +1,7 @@
+body, html {
+  height: inherit !important;
+}
+
 .terrama2-checkbox-align {
     margin-top: 19px !important;
     font-weight: 700 !important;
