verifying terrama2 data directory

--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -29,7 +29,8 @@
     dataProvider: {[ dataProvider|json|safe || {} ]},
     saveConfig: {[ saveConfig|json|safe ]},
     fields: {[ fields|json|safe || {} ]},
-    redirectTo: {[ (redirectTo || {})|json|safe ]}
+    redirectTo: {[ (redirectTo || {})|json|safe ]},
+    defaultFilePath: "{[ defaultFilePath ]}"
   };
 </script>
 
