--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -39,7 +39,11 @@
   <terrama2-box title="i18n.__(title)" helper="helperMessage" css="boxCss">
     <div class="col-md-12">
       <div class="col-md-12">
-        <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="MessageBoxService.reset()"></terrama2-alert-box2>
+        <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="MessageBoxService.reset()">
+
+
+
+        </terrama2-alert-box2>
       </div>
 
       <terrama2-table fields="fields" 
